[package]
name = "eintopf"
version = "0.0.1"
description = "Static soup using timely data-flow"

[dependencies]
abomonation="0.5"
#istring="0.1.7"
#istring = { git = "https://gitlab.com/sebk/istring.git" }
istring = { path = "istring" }
nix="*"
clap = "2.13"
differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow.git", rev = "801244e5d0e7b800aa627373c18ddbcb5e3d4c54" }
#differential-dataflow = { path = "../differential-dataflow" }
#differential-dataflow = "0.5.0"
slog = "1.5.2"
#slog = { version = "1.5.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "1.5.0"
time = "0.1"
timely = { git = "https://github.com/frankmcsherry/timely-dataflow.git" }
#timely = "0.5.1"
rand="0.3.13"
zipf = "1.0.0"

[profile.release]
debug = true

[[bin]]
name = "eintopf"
path = "src/main.rs"
