[package]
name = "eintopf"
version = "0.0.1"
description = "Static soup using timely data-flow"

[dependencies]
core_affinity = "0.5.9"
abomonation= { git = "https://github.com/frankmcsherry/abomonation" }
#istring="0.1.12"
#istring = { git = "https://gitlab.com/sebk/istring.git" }
#istring = { path = "istring" }
nix="*"
clap = "2.13"
#differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow.git", branch = "logging" }
differential-dataflow = { path = "../differential-dataflow" }
slog = "1.5.2"
slog-term = "1.5.0"
timely = { git = "https://github.com/frankmcsherry/timely-dataflow.git", branch = "logging_revamp" }
#timely = { path = "../timely-dataflow" }
rand="0.3.13"
zipf = "1.0.0"

[profile.release]
debug = true

[[bin]]
name = "eintopf"
path = "src/main.rs"
